# emjay

./: Cargo.toml  Justfile  README.md  TODO.txt  sample.txt
src/: ast.rs  backend.rs  backend_aarch64.rs  backend_aarch64_macos.rs  backend_register_allocator.rs  backend_x64_linux.rs  frontend.rs  grammar.pest  grammar.rs  grammar.txt  ir.rs  jit.rs  lexer.rs  main.rs  optimization.rs  parser.rs  program_counter.rs
