[package]
name = "emjay"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.7.8"
pest_derive = "2.7.8"
rustix = { version = "0.38.41", features = ["mm"] }
thiserror = "2.0.9"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
proptest = "1.6.0"
trim-margin = "0.1.0"
